# Advent-of-Code-Python

./: .gitignore  .pre-commit-config.yaml  .pre-commit-sync-with-poetry.json  LICENSE  README.md  poetry.toml  pre-commit-sync-with-poetry.json  pyproject.toml  renovate.json  renovateold.json  requirements-dev.txt  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: dotnet.yml  pre-commit.yml  pylint.yml  pytest.yaml  python-app.yml  python.yml
advent_of_code/: main.py
advent_of_code/helper/: download_files.py  helper.py  parse_args.py  paths.py  solve.py  solver.py
advent_of_code/year_2015/day_01/: day_01.py
advent_of_code/year_2015/day_02/: day_02.py
advent_of_code/year_2015/day_03/: day_03.py
advent_of_code/year_2015/day_04/: day_04.py
advent_of_code/year_2015/day_05/: day_05.py
advent_of_code/year_2015/day_06/: day_06.py
advent_of_code/year_2022/day_01/: day_01.py
advent_of_code/year_2022/day_02/: day_02.py
advent_of_code/year_2022/day_03/: day_03.py
advent_of_code/year_2022/day_04/: day_04.py
advent_of_code/year_2022/day_05/: day_05.py
advent_of_code/year_2022/day_06/: day_06.py
advent_of_code/year_2022/day_07/: day_07.py
advent_of_code/year_2022/day_08/: day_08.py
advent_of_code/year_2022/day_09/: day_09.py
advent_of_code/year_2022/day_10/: day_10.py
advent_of_code/year_2022/day_11/: day_11.py
advent_of_code/year_2022/day_12/: day_12.py
advent_of_code/year_2022/day_13/: day_13.py
advent_of_code/year_2022/day_14/: day_14.py
advent_of_code/year_2023/day_01/: day_01.py
advent_of_code/year_2023/day_03/: day_03.py
advent_of_code/year_2023/day_04/: day_04.py
advent_of_code/year_2024/day_01/: day_01.py
advent_of_code/year_2024/day_02/: day_02.py
advent_of_code/year_2024/day_03/: day_03.py
advent_of_code/year_2024/day_04/: day_04.py
advent_of_code_2022/: main.py
advent_of_code_2022/helper/: download_files.py  parse_args.py  solve.py
dotnet - attempt 1/AdventOfCode/: AdventOfCode.sln
dotnet/Advent.Of.Code/: .editorconfig  Advent.Of.Code.sln  Directory.Build.props  stylecop.json
python/: .editorconfig
tests/days/day_01/: test_day_01.py
tests/helper/: abstract_test_day.py
tests/year_2015/: abstract_test_day_2015.py
tests/year_2022/: abstract_test_day_2022.py
tests/year_2023/: abstract_test_day_2023.py
tests/year_2024/: abstract_test_day_2024.py
tests/year_2025/: abstract_test_day_2025.py
(+85 files in other folders)
