[tool.poetry]
name = "advent-of-code-2022"
version = "0.1.0"
description = "My approaches to programming puzzles found in the 2022 edition of Advent of Code."
# authors left as default for now.
# There are no plans to publish to PyPI and I'd rather exclude personal details from VCS.
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "advent_of_code_2022"}]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
pylint = "^2.15.9"
black = {version = "^22.12.0", extras = ["d"]}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
