[tool.poetry]
name = "advent-of-code-2022"
version = "0.1.0"
description = "My approaches to programming puzzles found in the 2022 edition of Advent of Code."
# authors left as default for now.
# There are no plans to publish to PyPI and I'd rather exclude personal details from VCS.
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "advent_of_code_2022"}]

[tool.poetry.dependencies]
python = "^3.10"
advent-of-code-data = "^1.3.2"
advent-of-code-ocr = "^1.0.0"
anytree = "^2.8.0"
numpy = "^1.24.1"
parse = "^1.19.0"

[tool.poetry.group.dev.dependencies]
bandit = "^1.7.4"
black = {version = "^22.12.0", extras = ["d"]}
docformatter = "^1.5.1"
isort = "^5.12.0"
mypy = "^0.991"
pre-commit = "^2.21.0"
pylint = "^2.15.10"
pytest = "^7.2.1"

[tool.isort]
profile = "black"

[tool.pylint.format]
max-line-length = "88"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
